all end points recheck done
