# src/api/v1/prescription/controller/create.js
@@ -1,14 +1,21 @@
 const prescriptionService = require('../../../../lib/prescriptionService')
 
 const create = async (req, res, next) => {
-  const { diagnosis, advice, nextdate, consultant_visit_id } = req.body
-  console.log(req.body)
+  const {
+    diagnosis,
+    advice,
+    nextdate,
+    consultant_visit_id,
+    general_condition
+  } = req.body
+
   try {
     const prescription = await prescriptionService.create({
       diagnosis,
       advice,
       nextdate,
       consultant_visit_id,
+      general_condition,
       user: req.user.id
     })
 
